[package]
name = "ffs"
version = "0.1.0"
authors = ["Devin Waas <dsc.waas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix_trie = "0.1.6"
structopt = "0.3.13"
#failure = "0.1.7"
#exitfailure = "0.5.1"

[dev-dependencies]
#assert_cmd = "0.10"
#predicates = "1"
#tempfile = "3"
